name:                tagsoup-lens
version:             0.1
synopsis:            Various optics for the TagSoup HTML parsing library
description:         Various optics for the TagSoup HTML parsing library
homepage:            https://github.com/alpmestan/tagsoup-lens
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
copyright:           2016 Alp Mestanogullari
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:  Text.HTML.TagSoup.Lens
  -- other-modules:
  -- other-extensions:
  build-depends:
                base >=4.8 && <5,
                tagsoup,
                hashable,
                lens,
                unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
